codex-rs/tui/src/app/tests/snapshots/codex_tui__app__tests__background_task_defaults_tests__review_regression_agents_overview_creation_is_fresh_but_returning_is_not.snap
---
source: tui/src/app/tests/background_task_defaults_tests.rs
expression: "format!(\"created from the dashboard:\\n{}\\nreturned to the existing task:\\n{}\",\nbefore_footer(&created), before_footer(&returned))"
---
created from the dashboard:
                            ⠈     ⢀     ⠁                 ⠂
›⠁Ask Elpis to do anything         ⠈      ⠁
       ⢀            ⠠     ⠄         ⠠          ⢀    ⠠     ⡀
returned to the existing task:
› Ask Elpis to do anything
